Initial Version of Multidataviewer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(DT,datatable)
 importFrom(DT,renderDT)
 importFrom(purrr,map)
 importFrom(shiny,actionButton)
+importFrom(shiny,appendTab)
 importFrom(shiny,br)
 importFrom(shiny,checkboxGroupInput)
 importFrom(shiny,checkboxInput)
@@ -22,6 +23,7 @@ importFrom(shiny,modalDialog)
 importFrom(shiny,observeEvent)
 importFrom(shiny,reactive)
 importFrom(shiny,reactiveVal)
+importFrom(shiny,removeTab)
 importFrom(shiny,renderTable)
 importFrom(shiny,req)
 importFrom(shiny,showModal)
