#10 : updates to documentation

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,31 @@
 url: https://madhankumarnagaraji.github.io/dataviewR/
 template:
   bootstrap: 5
+  math-rendering: mathjax
+  params:
+    bootswatch: sandstone
+news:
+  cran_dates: true
 
+navbar:
+  structure:
+    left: [home, getstarted, reference, articles, news]
+    right: [search,  newissue, github]
+  components:
+    getstarted:
+      text: Get Started
+      href: articles/Introduction-to-dataviewR.html
+    reference:
+      text: Reference
+      href: reference/index.html
+    newissue:
+      icon: fa-bug
+      href: https://github.com/madhankumarnagaraji/dataviewR/issues/new/choose
+      aria-label: New Issue
+
+
+articles:
+  - title: Get Started
+    navbar: Get started
+    contents:
+      - Introduction-to-dataviewR
