#10: added two sessions

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -34,3 +34,5 @@ articles:
     contents:
       - Filtering-Expressions
       - Multiple-Datasets
+      - adam-clinical-dataset
+      - importing-external-data
