#10: updated vignettes, README.md,_pkgdown.yml and description file

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -35,4 +35,4 @@ articles:
       - Filtering-Expressions
       - Multiple-Datasets
       - adam-clinical-dataset
-      - importing-external-data
+      - Exporting-and-Reproducibility
