--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,10 @@ Title: An Interactive and Feature-Rich Data Viewer
 Version: 0.1.1
 Depends: R (>= 4.2.0)
 Authors@R: 
-    person("Madhan", "Kumar N", , "madhanmanoj1999@gmail.com", role = c("aut", "cre"))
+    c(person("Madhan Kumar", "N", email = "madhanmanoj1999@gmail.com", role = c("aut", "cre")),
+    person("Siddhesh","Pujari", email = "siddheshpujari25@gmail.com", role = "aut"),
+    person("Gomathi","S", email = "gomathisudhakar1998@gmail.com", role = "aut"))
+Maintainer: Madhan Kumar N <madhanmanoj1999@gmail.com>
 Description: Provides an interactive viewer for 'data.frame' and 'tibble' objects using 'shiny' <https://shiny.posit.co/> and 'DT' <https://rstudio.github.io/DT/>. It supports complex filtering, column selection, and automatic generation of reproducible 'dplyr' <https://dplyr.tidyverse.org/> code for data manipulation. The package is designed for ease of use in data exploration and reporting workflows.
 URL: https://github.com/madhankumarnagaraji/dataviewR, https://madhankumarnagaraji.github.io/dataviewR/
 BugReports: https://github.com/madhankumarnagaraji/dataviewR/issues
